Replaced AddUntilModifierEffect with AddUntilModifierAction